# hate_measure

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
hate_measure/: keys.py  utils.py
hate_measure/nn/: classifiers.py  layers.py  regressors.py
hub/: scorer.py
notebooks/: example_hate_speech_measurer.ipynb
scripts/: train.py
src/hate_measure/: constants.py  cv.py  data.py  keys.py  loader.py  train.py  trainer.py  utils.py
src/hate_measure/nn/: __init__.py  config.py  lightning.py  regressors.py  regressors_tf.py  scorer.py
