[project]
name = "hate-measure"
version = "0.0.1"
description = "Measuring Hate Speech Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
