[project]
name = "hate-measure"
version = "0.0.1"
description = "Measuring Hate Speech Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.3",
]

[project.optional-dependencies]
wandb = [
    "wandb>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
